Fix alignment issues with the page

--- a/botornot/imports/ui/All.less
+++ b/botornot/imports/ui/All.less
@@ -49,23 +49,23 @@ body {
 
 .align-container {
     max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
-@media(min-width: 768px) { 
-    .align-container {
-        margin-left: 245px;
-    }
-}
-@media(min-width: 992px) { 
-    .align-container {
-        margin-left: 360px;
-    }
-}
-@media(max-width: 767px) { 
-    .align-container {
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+// @media(min-width: 768px) { 
+//     .align-container {
+//         margin-left: 245px;
+//     }
+// }
+// @media(min-width: 992px) { 
+//     .align-container {
+//         margin-left: 360px;
+//     }
+// }
+// @media(max-width: 767px) { 
+//     .align-container {
+//     }
+// }
 // button style
 .btn-style {
     background-color: @fg;
