--- a/botornot/imports/ui/components/NavBar.less
+++ b/botornot/imports/ui/components/NavBar.less
@@ -29,7 +29,9 @@ ul.nav.navbar-nav.navbar-right{
     text-transform: uppercase;
 }
 .navbar-default .navbar-nav>li>a{
-    .botnot-btn
+    .botnot-btn;
+    padding-right: 20px;
+    padding-left: 15px;
 }
 
 .navbar-default .navbar-nav>li>a:hover{
